[gd_scene load_steps=8 format=3 uid="uid://bnlva8qbvejak"]

[ext_resource type="Script" path="res://final_dog.gd" id="1_3tqni"]
[ext_resource type="AudioStream" uid="uid://0gclrxfw6r2u" path="res://SFX/dog_bark.mp3" id="2_u77di"]
[ext_resource type="AudioStream" uid="uid://cictcy2akey7y" path="res://SFX/chicken_die.mp3" id="3_hmgal"]
[ext_resource type="ArrayMesh" uid="uid://b26ikowmywshh" path="res://game/OtherCharacters/BrownDog/BrownDog.obj" id="4_dq5tr"]
[ext_resource type="ArrayMesh" uid="uid://d6ofn8yvwe4c" path="res://game/OtherCharacters/WhiteDog/WhiteDog.obj" id="5_k5dd6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ljwbd"]
radius = 0.799758
height = 1.59952

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1x37s"]
height = 1.04711
radius = 5.0

[node name="DogEnemy" type="CharacterBody3D" groups=["Enemy"]]
motion_mode = 1
wall_min_slide_angle = 3.14159
script = ExtResource("1_3tqni")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, -0.000441909, 0.586781, -0.000435948)
shape = SubResource("CapsuleShape3D_ljwbd")

[node name="Area3D" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.515788, 0)
shape = SubResource("CylinderShape3D_1x37s")
disabled = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_u77di")
bus = &"SFX"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_hmgal")
volume_db = -4.684
bus = &"SFX"

[node name="BrownDog" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.303526, 0)
mesh = ExtResource("4_dq5tr")

[node name="WhiteDog" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.303526, 0)
visible = false
mesh = ExtResource("5_k5dd6")

[connection signal="body_entered" from="Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="_on_area_3d_body_exited"]
